Updates to handlebars.

--- a/views/addProperty.handlebars
+++ b/views/addProperty.handlebars
@@ -1,6 +1,10 @@
 <div class="container">
 
-<h1 class="display-4">Add Property to Database</h1>
+<h2 class="display-4">Add Property</h2>
+
+<p>Use this page to add a property to the website's database. </p>
+
+<a href="/property">Want to look at already uploaded properties instead? Click here.</a>
 
 {{#if error}}
 <p class="error">{{error}}</p>
@@ -116,5 +120,4 @@
 <button id="submitButton" type="submit">Register</button>
 </form>
 
-<a href="/properties">Want to look at already uploaded properties instead? Click here.</a>
 </div>
