--- a/views/allLandlords.handlebars
+++ b/views/allLandlords.handlebars
@@ -1,4 +1,12 @@
 <!--CORRECT ROOT LINK PATH -->
+
+<h2 class="display-4">See Landlords</h2>
+
+<p>Use this page to see landlords stored on the website's database.</p> 
+<p>Use the form to search by landlord's city and state. Use the sort to order the landlords based on your preferred rating system.</p>
+
+<a href="/user/addlandlord">Want to add a landlord to the database? Click here.</a>
+
 <form id="searchLandlordForm">
     
     <label for="searchType">Search by:</label>
@@ -7,7 +15,7 @@
         <option value="state">State</option>
     </select>
 
-    <div id="cityInput" hidden>
+    <div id="cityInputField" hidden>
         <label for="cityInput">Enter city:</label>
         <input type="text" id="cityInput">
     </div>
