--- a/views/communityForum.handlebars
+++ b/views/communityForum.handlebars
@@ -2,9 +2,9 @@
 
 {{!-- Community Forum --}}
 <h2>Community Forum</h2>
+<p>Join the conversation! Discover ongoing conversations within threads here. Simply click on them to view all comments posted within the thread or to contribute your own comment.</p> 
 
-<!-- Button to add a thread -->
-<button onclick="addThread()">Add Thread</button>
+<a href="/thread/addthread">Want to add a thread to the database? Click here.</a>
 
 <div class="forum-threads">
 
