--- a/views/propertyReview.handlebars
+++ b/views/propertyReview.handlebars
@@ -1,5 +1,9 @@
 {{!-- Property Review Form --}}
-<h2>Review for {{property.name}}</h2>
+<h2>Review for {{property.propertyName}}</h2>
+
+<p>Use this form to submit a review for {{property.propertyName}}.</p>
+<a href="/property/{{property.propertyId}}">Want to see reviews already written for this property? Click here.</a>
+
 
 {{#if error}}
 <p class="error">{{error}}</p>
@@ -10,22 +14,22 @@
 <form id="propertyReviewForm">
 
     <label for="maintenanceRating">Maintenance Rating:</label>
-    <input type="range" id="maintenanceRating" name="maintenanceRating" min="1" max="5" required>
+    <input type="range" id="maintenanceRating" name="maintenanceRating" min="1" max="5">
     
     <label for="locationDesirabilityRating">Location Desirability Rating:</label>
-    <input type="range" id="locationDesirabilityRating" name="locationDesirabilityRating" min="1" max="5" required>
+    <input type="range" id="locationDesirabilityRating" name="locationDesirabilityRating" min="1" max="5">
     
     <label for="ownerResponsivenessRating">Owner Responsiveness Rating:</label>
-    <input type="range" id="ownerResponsivenessRating" name="ownerResponsivenessRating" min="1" max="5" required>
+    <input type="range" id="ownerResponsivenessRating" name="ownerResponsivenessRating" min="1" max="5">
     
     <label for="propertyConditionRating">Property Condition Rating:</label>
-    <input type="range" id="propertyConditionRating" name="propertyConditionRating" min="1" max="5" required>
+    <input type="range" id="propertyConditionRating" name="propertyConditionRating" min="1" max="5">
     
     <label for="communityRating">Community Rating:</label>
-    <input type="range" id="communityRating" name="communityRating" min="1" max="5" required>
+    <input type="range" id="communityRating" name="communityRating" min="1" max="5">
     
     <label for="amenitiesRating">Amenities Rating:</label>
-    <input type="range" id="amenitiesRating" name="amenitiesRating" min="1" max="5" required>
+    <input type="range" id="amenitiesRating" name="amenitiesRating" min="1" max="5">
     
     <label for="reviewText">Review:</label>
     <textarea id="reviewText" name="reviewText" required></textarea>
