--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,9 @@
 <div class="container">
 <h1 class="display-4">Register</h1>
+
+<p>Use this form to register an account.</p>
+<a href="/login">Already have an account? Click here to log-in</a>
+
 {{#if error}}
 <p class="error">{{error}}</p>
 {{/if}}
@@ -82,5 +86,5 @@
 
 <button id="submitButton" type="submit">Register</button>
 </form>
-<a href="/login">Already have an account? Click here to log-in</a>
+
 </div>
