--- a/views/addThread.handlebars
+++ b/views/addThread.handlebars
@@ -1,6 +1,9 @@
 <div class="container">
 
-<h1 class="display-4">Add Thread to Forum</h1>
+<h2 class="display-4">Add Thread to Community Forum</h2>
+   
+<p>This page allows you to add a new thread to the community forum.</p> 
+<a href="/thread">Want to look at what's already on the community forum? Click here.</a>
 
 {{#if error}}
 <p class="error">{{error}}</p>
