--- a/views/propertyDetails.handlebars
+++ b/views/propertyDetails.handlebars
@@ -2,8 +2,9 @@
 <!-- CORRECT BUTTON to go to path to add review -->
 <h2>Property Details</h2>
 
-<!-- Button to add a review -->
-<button onclick="addReview()">Add Review</button>
+<p>This page allows you to see all reviews for the property {{property.name}}.</p>
+
+<a href="/property/addPropertyReview/{{property.propertyId}}">Want to add a review for this landlord? Click here.</a>
 
 <div class="property-details">
     
@@ -18,40 +19,40 @@
     <div id="map"></div> <!-- Placeholder for map integration -->
 
     <h3>Average Ratings</h3>
-    <ul>
-        <li>Location Desirability Rating: {{property.averageRatings.averageLocationDesirabilityRating}}</li>
-        <li>Owner Responsiveness Rating: {{property.averageRatings.averageOwnerResponsivenessRating}}</li>
-        <li>Property Condition Rating: {{property.averageRatings.averagePropertyConditionRating}}</li>
-        <li>Community Rating: {{property.averageRatings.averageCommunityRating}}</li>
-        <li>Amenities Rating: {{property.averageRatings.averageAmenitiesRating}}</li>
-    </ul>
+    <div>
+        <p>Location Desirability Rating: {{property.averageRatings.averageLocationDesirabilityRating}}</p>
+        <p>Owner Responsiveness Rating: {{property.averageRatings.averageOwnerResponsivenessRating}}</p>
+        <p>Property Condition Rating: {{property.averageRatings.averagePropertyConditionRating}}</p>
+        <p>Community Rating: {{property.averageRatings.averageCommunityRating}}</p>
+        <p>Amenities Rating: {{property.averageRatings.averageAmenitiesRating}}</p>
+    </div>
 
     <h3>Reviews</h3>
-    <ul>
+    <div>
         {{#each property.reviews}}
-        <li>
-            User ID: {{this.userId}}<br>
-            Location Desirability Rating: {{this.locationDesirabilityRating}}<br>
-            Owner Responsiveness Rating: {{this.ownerResponsivenessRating}}<br>
-            Property Condition Rating: {{this.propertyConditionRating}}<br>
-            Community Rating: {{this.communityRating}}<br>
-            Amenities Rating: {{this.amenitiesRating}}
-        </li>
+        <div>
+            <p>User ID: {{this.userId}}</p>
+            <p>Location Desirability Rating: {{this.locationDesirabilityRating}}</p>
+            <p>Owner Responsiveness Rating: {{this.ownerResponsivenessRating}}</p>
+            <p>Property Condition Rating: {{this.propertyConditionRating}}</p>
+            <p>Community Rating: {{this.communityRating}}</p>
+            <p>Amenities Rating: {{this.amenitiesRating}}</p>
+        </div>
         {{/each}}
-    </ul>
+    </div>
 
     <h3>Comments</h3>
-    <ul>
+    <div>
         {{#each property.comments}}
-        <li>
-            User ID: {{this.userId}}<br>
-            Comment Text: {{this.commentText}}<br>
-            Date Created: {{this.dateCreated}}<br>
-            Likes: {{this.likes}} <a href="/thread_routes/upvote/{{this.commentId}}">Like</a><br>
-            Dislikes: {{this.dislikes}} <a href="/thread_routes/downvote/{{this.commentId}}">Dislike</a>
-        </li>
+        <div>
+            <p>User ID: {{this.userId}}</p>
+            <p>Comment Text: {{this.commentText}}</p>
+            <p>Date Created: {{this.dateCreated}}</p>
+            <p>Likes: {{this.likes}} <a href="/thread_routes/upvote/{{this.commentId}}">Like</a></p>
+            <p>Dislikes: {{this.dislikes}} <a href="/thread_routes/downvote/{{this.commentId}}">Dislike</a></p>
+        </div>
         {{/each}}
-    </ul>
+    </div>
 </div>
 
 <!-- Add Comment Form -->
