--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -1,6 +1,6 @@
 {{!-- <form action="/report">
 </form> --}}
-<form id="reportForm" action="/report/{{reportState}}/{{id}}" method="POST">
+<form id="reportForm" action="/report/{{reportState}}/{{id}}/{{propertyId}}" method="POST">
     {{#if error}}
     <p class="error">{{error}}</p>
     {{/if}}
