--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -6,10 +6,8 @@
 </head>
 <body class="{{themePreference}}">
     <div class="error">
-        {{#if error}}
         <h1>Oops! Something went wrong.</h1>
-                <p>{{errorMessage}}</p>
-        {{/if}}
+                <p>{{error}}</p>
         <a href="/login">Return to Login</a>
     </div>
 </body>
