--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,21 +1,41 @@
 <div class="row justify-content-center">
-<div class="col-md-8">
-    <div class="jumbotron">
-    <h1 class="display-4">{{ user.username }}'s Profile</h1>
-    <p class="lead">Email: <i class="fas fa-envelope"></i> {{ user.email }}</p>
-    <hr class="my-4">
-    <h3>Bookmarked Properties</h3>
-    <ul class="list-group">
-        {{#each user.bookmarks}}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div>
-            <h5>{{ this.propertyName }}</h5>
-            </div>
-            <span class="badge bg-primary rounded-pill">Rating: {{ this.rating }} stars</span>
-        </li>
-        {{/each}}
-    </ul>
+    <div class="col-md-8">
+        <div class="jumbotron">
+
+            <h2 class="display-4">{{ user.username }}'s Profile</h2>
+
+            <h3>User Details</h3>
+            <p class="lead">Email: <i class="fas fa-envelope"></i> {{ user.email }}</p>
+            <p class="lead">First Name: {{ user.firstName }}</p>
+            <p class="lead">Last Name: {{ user.lastName }}</p>
+            <p class="lead">City: {{ user.city }}</p>
+            <p class="lead">State: {{ user.state }}</p>
+
+
+            <hr class="my-4">
+
+            <!-- Show  properties if the user is not a landlord -->
+            {{#if user.isLandlord}}
+                <h3>Properties</h3>
+                <div class="list-group">
+                    {{#each user.properties}}
+                            <h4>{{ this.propertyName }}</h4>
+                            <a href="#">{{ this.propertyName }} Property Details</a> 
+                    {{/each}}
+                </div>
+            {{/if}}
+
+            <!-- Show bookmarked properties if the user is not a landlord -->
+            {{#if not user.isLandlord}}
+                <h3>Bookmarked Properties</h3>
+                <div class="list-group">
+                    {{#each user.bookmarks}}
+                                <h4>{{ this.propertyName }}</h4>
+                                <a href="#">{{ this.propertyName }} Details</a> 
+                    {{/each}}
+                </div>
+            {{/if}}
+
+        </div>
     </div>
 </div>
-</div>
-
