added property routes

--- a/views/addProperty.handlebars
+++ b/views/addProperty.handlebars
@@ -12,7 +12,7 @@
 
 <div id="errorDiv" class="error-message" style="color: red;"></div>
 
-<form id="addProperty-form" method="POST" action="/addProperty">
+<form id="addProperty-form" method="POST" action="/property/addProperty">
 
 <label for="propertyName">Property Name</label>
 <input type="text" id="propertyName" name="propertyName">
