--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -8,7 +8,7 @@
     <div class="error">
         <h1>Oops! Something went wrong.</h1>
                 <p>{{error}}</p>
-        <a href="/login">Return to Login</a>
+        <a href="/login">Return to Home</a>
     </div>
 </body>
 </html>
