propertyRoutes - search functions made gets; addproperty - long/lat made to text field; propertyDetails - minor html text change; propertySearch ajax - fixed searchquery to searchquery.val(). fix handled of response, receiving an array.

--- a/views/addProperty.handlebars
+++ b/views/addProperty.handlebars
@@ -79,13 +79,13 @@
 </select>
 
 <label for="zipcode">Zipcode</label>
-<input type="number" id="zipcode" name="zipcode">
+<input type="text" id="zipcode" name="zipcode">
 
 <label for="latitude">Latitude</label>
-<input type="number" id="latitude" name="latitude">
+<input type="text" id="latitude" name="latitude">
 
 <label for="longitude">Longitude</label>
-<input type="number" id="longitude" name="longitude">
+<input type="text" id="longitude" name="longitude">
 
 <label for="category">Property Type</label>
 <select id="category" name="category">
