--- a/views/propertyDetails.handlebars
+++ b/views/propertyDetails.handlebars
@@ -4,7 +4,7 @@
 
 <p>This page allows you to see all reviews for the property {{property.name}}.</p>
 
-<a href="/property/addPropertyReview/{{property.propertyId}}">Want to add a review for this landlord? Click here.</a>
+<a href="/property/addPropertyReview/{{property.propertyId}}">Want to add a review for this property? Click here.</a>
 
 <div class="property-details">
     
