--- a/views/addThread.handlebars
+++ b/views/addThread.handlebars
@@ -11,7 +11,7 @@
 
 <div id="errorDiv" class="error-message" style="color: red;"></div>
 
-<form id="addThread-form" method="POST" action="/addThread">
+<form id="addThread-form" method="POST" action="/thread/addThread">
 
 <label for="title">Thread Title</label>
 <input type="text" id="title" name="title">
@@ -31,5 +31,5 @@
 <button id="submitButton" type="submit">Submit</button>
 </form>
 
-<a href="/forum">Back to Forum</a>
+<a href="/thread">Back to Forum</a>
 </div>
