--- a/views/communityForum.handlebars
+++ b/views/communityForum.handlebars
@@ -21,8 +21,8 @@
     <p>Likes: {{this.likes}}</p>
     <p>Dislikes: {{this.dislikes}}</p>
 
-    <p><a href="/threads_routes/upvote/{{this.threadId}}">Upvote Thread</a> / <a href="/threads_routes/downvote/{{this.threadId}}">Downvote Thread</a></p>
-    <p><a href="/threads_routes/thread/{{this.threadId}}">See the full thread.</a></p> 
+    <p><a href="/thread/upvote/{{this.threadId}}">Upvote Thread</a> / <a href="/thread/downvote/{{this.threadId}}">Downvote Thread</a></p>
+    <p><a href="/thread/id/{{this.threadId}}">See the full thread.</a></p> 
     
   </div>
   {{/each}}
