--- a/views/allProperties.handlebars
+++ b/views/allProperties.handlebars
@@ -9,7 +9,7 @@
 
 <form id="searchForm" method="GET">
     
-    <div id='errorDiv' hidden></div>
+    <div id='errorDiv' class="error" hidden></div>
 
     <label for="searchType">Search Type:</label>
       <select id="searchType" name="type">
