Fixes the property review function.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -250,3 +250,9 @@ font-size: 90%;
     width: 150px;
   }
   
+  #submitCommentButton {
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 5px 10px;
+  }
