--- a/views/landlordReview.handlebars
+++ b/views/landlordReview.handlebars
@@ -10,7 +10,7 @@
 
 <div id="errorDiv" class="error-message" style="color: red;"></div>
 
-<form id="landlordReviewForm">
+<form id="landlordReviewForm" method = "post">
     
     <label for="kindnessRating">Kindness Rating:</label>
     <input type="range" id="kindnessRating" name="kindnessRating" min="1" max="5">
