--- a/views/landlordDetails.handlebars
+++ b/views/landlordDetails.handlebars
@@ -6,7 +6,8 @@
 <h2>Landlord Details</h2>
 <p>This page allows you to see all reviews for the landlord {{landlord.firstName}} {{landlord.lastName}}.</p>
 
-<a href="/user/addLandLordReview/{{landlord.userId}}">Want to add a review for this landlord? Click here.</a>
+<p>{{landlord.userId}}</p>
+<a href="/user/landlordReview/{{landlord.userId}}">Want to add a review for this landlord? Click here.</a>
 
 <div class="landlord-details">
  
@@ -26,20 +27,19 @@
 
   <h3>Average Ratings</h3>
   <div>
-    <p>Kindness Rating: {{landlord.averageRatings.averageKindnessRating}}</p>
-    <p>Maintenance Responsiveness Rating: {{landlord.averageRatings.averageMaintenanceResponsivenessRating}}</p>
-    <p>Overall Communication Rating: {{landlord.averageRatings.averageOverallCommunicationRating}}</p>
-    <p>Professionalism Rating: {{landlord.averageRatings.averageProfessionalismRating}}</p>
-    <p>Handiness Rating: {{landlord.averageRatings.averageHandinessRating}}</p>
-    <p>Deposit Handling Rating: {{landlord.averageRatings.averageDepositHandlingRating}}</p>
+    <p>Kindness Rating: {{landlord.averageRatings.kindnessRating}}</p>
+    <p>Maintenance Responsiveness Rating: {{landlord.averageRatings.maintenanceResponsivenessRating}}</p>
+    <p>Overall Communication Rating: {{landlord.averageRatings.overallCommunicationRating}}</p>
+    <p>Professionalism Rating: {{landlord.averageRatings.professionalismRating}}</p>
+    <p>Handiness Rating: {{landlord.averageRatings.handinessRating}}</p>
+    <p>Deposit Handling Rating: {{landlord.averageRatings.depositHandlingRating}}</p>
   </div>
 
   <h3>All Landlord Reviews</h3>
   <div>
     {{#each landlord.reviews}}
     <div>
-      <p>Author: {{this.author}}</p>
-      <p>Date: {{this.date}}</p>
+      <br>
       <p>Kindness Rating: {{this.kindnessRating}}</p>
       <p>Maintenance Responsiveness Rating: {{this.maintenanceResponsivenessRating}}</p>
       <p>Overall Communication Rating: {{this.overallCommunicationRating}}</p>
