Changes for validation

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,6 +65,8 @@
 <script src="/public/js/client_side_validation.js"></script>
   <script src="/public/js/propertySearchAjax.js"></script>
     <script src="/public/js/landlordSearchAjax.js"></script>
+        <script src="/public/js/register.js"></script>
+
 
 </body>
 </html>
