--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,10 +6,11 @@ background-color: rgb(255, 255, 255);
 }
 
 #map {
-    height: 400px;
-    width: 400px;
-  }
-  
+    height: 450px;
+    width: 550px;
+    border: solid;
+    border-color: #4a4a4a;
+}
 
 .error{
 background-color: rgba(255, 0, 0, 0.642);
