Adds filter and sort options to the landlord listings page. Removes css linked outside project.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,7 +55,7 @@ background-color: #3334371b;
 }
 
 input[type="submit"] {
-    background-color: #ffffff;
+    background-color: #1f83ae;
     color: white;
     border: none;
     border-radius: 4px;
