--- a/views/allProperties.handlebars
+++ b/views/allProperties.handlebars
@@ -1,11 +1,12 @@
 <h2 class="display-4">See Properties</h2>
 
-<p>Use this page to see properties stored on the website's database.</p> 
-<p>Use the form to search by properties's location.</p>
+<p>Use this page to see properties stored on the website's database and search by their location.</p>
 <p>Click on a property listing to see additional details and navigate to its listing page.</p>
 
 <a href="/property/addproperty">Want to add a property to the database? Click here.</a>
 
+<br>  
+<br>
 
 <form id="searchForm" method="GET">
     
