Makes community forum fully operational.

--- a/views/communityForum.handlebars
+++ b/views/communityForum.handlebars
@@ -15,9 +15,8 @@
     <h3>{{this.title}}</h3>
 
     <p>Category: {{this.category}}</p>
-    <p>Created by: {{this.userId}}</p>
-    <p>Created Date: {{this.createdDate}}</p>
-    <p>Last Updated: {{this.lastUpdated}}</p>
+    <p>Created by: {{this.userRealName}}</p>
+    <p>Created Date: {{this.formattedCreatedDate}}</p>
     <p>Likes: {{this.likes}}</p>
     <p>Dislikes: {{this.dislikes}}</p>
 
