--- a/views/threadIndividual.handlebars
+++ b/views/threadIndividual.handlebars
@@ -1,43 +1,47 @@
 {{!-- ADD ROUTES. UPVOTE/DOWNVOTE THREADS AND COMMENTS --}}
 
 {{!-- Community Forum --}}
-<h2>{{threadData.title}}</h2>
+<h2>Thread Title: {{threadData.title}}</h2>
 
 <a href="/thread">Want to see all threads? Click here.</a>
-
+<hr>
 <div class="forum-threads">
 
+    <h3>About this Thread</h3>
     <p>Category: {{threadData.category}}</p>
-    <p>Created by: {{threadData.userId}}</p>
-    <p>Created Date: {{threadData.createdDate}}</p>
-    <p>Last Updated: {{threadData.lastUpdated}}</p>
-    <p>Likes: {{threadData.likes}} <a href="/thread/upvote/{{threadData.threadId}}">Like Thread</a></p>
-    <p>Dislikes: {{threadData.dislikes}} <a href="/thread/downvote/{{threadData.threadId}}">Downvote Thread</a></p>
+    <p>Created by: {{threadData.userRealName}}</p>
+    <p>Created Date: {{threadData.formattedCreatedDate}}</p>
+    <p>Likes: {{threadData.likes}} <a href="/thread/upvote/{{threadData.threadId}}">Add Like</a></p>
+    <p>Dislikes: {{threadData.dislikes}} <a href="/thread/downvote/{{threadData.threadId}}">Add Dislike</a></p>
+  
+    <hr>
 
-    <p>Comments:</p>
+    <!-- Add Comment Form -->
+    <h3>Add Comment</h3>
+    <form action="/thread/addComment/{{threadId}}" method="post">
+      <label for="comment">Use this text form to add your own comment!</label><br>
+      <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
+      <input type="submit" value="Submit">
+    </form>
+    
+    <hr>
 
-    <p><a href="/addComment/{{threadData.threadId}}"></a>Add a comment to this thread.</p>
+    <h3>Comments</h3>
 
     <div class="comments">
     {{#each threadData.comments}}
     <div class="comment">
-        <p>User ID: {{threadData.userId}}</p>
-        <p>Comment Text: {{threadData.commentText}}</p>
-        <p>Date Created: {{threadData.dateCreated}}</p>
-        <p>Likes: {{threadData.likes}} <a href="/thread/upvoteComment/{{threadData.commentId}}">Like Comment</a></p>
-        <p>Dislikes: {{threadData.dislikes}} <a href="/thread/downvoteComment/{{threadData.commentId}}">Dislike Comment</a></p>
+        <h4>User Name: {{this.userRealName}}</h4>
+        <p>Comment Text: {{this.commentText}}</p>
+        <p>Date Created: {{this.formattedCreatedDate}}</p>
+        <p>Likes: {{this.likes}} <a href="/thread/upvote/{{this.commentId}}">Add Like</a></p>
+        <p>Dislikes: {{this.dislikes}} <a href="/thread/downvote/{{this.commentId}}">Add Dislike</a></p>
     </div>
+    <hr>
+    <br>
     {{/each}}
 
   </div>
-
-
-  <!-- Add Comment Form -->
-    <form action="/thread/addComment/{{this.threadId}}" method="post">
-      <label for="comment">Add a comment:</label><br>
-      <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
-      <input type="submit" value="Submit">
-    </form>
 
 </div>
 
@@ -52,4 +56,5 @@
 </div>
 {{/each}}
 </div>-->
+
 
