Multiple reports can be added to the property

--- a/views/moderator.handlebars
+++ b/views/moderator.handlebars
@@ -21,6 +21,9 @@
                 <form action="/moderator/reject/{{this.userId}}/{{this.report_id}}/{{this.property_id}}" method="POST">
                     <button class="btn btn-reject" type="submit">Delete property</button>
                 </form>
+                <!-- Button to view the reported item -->
+
+
             </div>
             </div>
         {{/each}}
