button to report

--- a/views/propertyDetails.handlebars
+++ b/views/propertyDetails.handlebars
@@ -63,6 +63,11 @@
       <input type="submit" value="Submit" id="submitCommentButton">
     </form>
 
+  <form action="/report/property/{{userId}}/{{property.propertyId}}" method="get">
+   <label for="submitCommentButton">Report property?</label><br>
+      <input class="btn" type="submit" value="Report" id="submitCommentButton">
+    </form>
+
 <!-- Map --> 
 
 <script type="text/javascript">
