--- a/views/propertyDetails.handlebars
+++ b/views/propertyDetails.handlebars
@@ -49,32 +49,34 @@
             <p>Amenities Rating: {{this.amenitiesRating}}</p>
             <p>Review Text:{{this.reviewText}}</p>
         </div>
-        
+        <hr>
         {{/each}}
     </div>
     <hr>
-    <h3>Comments</h3>
-    
 <!-- Add Comment Form -->
-    <form action="/property_routes/addComment/{{property.propertyId}}" method="post">
-      <label for="comment">Add a comment:</label><br>
+    <h3>Comments</h3>
+    <form action="/property/addComment/{{property.propertyId}}" method="post">
+      <label for="comment">Use this text form to add your own comment!</label><br>
       <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
-      <input type="submit" value="Submit" id="submitCommentButton">
+      <input type="submit" value="Submit">
     </form>
+
     <h4>Past Comments</h4>
     <div>
         {{#each property.comments}}
+        
         <div>
-            <p>User ID: {{this.userId}}</p>
+            <p>User Name: {{this.userRealName}}</p>
             <p>Comment Text: {{this.commentText}}</p>
-            <p>Date Created: {{this.dateCreated}}</p>
-            <p>Likes: {{this.likes}} <a href="/thread_routes/upvote/{{this.commentId}}">Like</a></p>
-            <p>Dislikes: {{this.dislikes}} <a href="/thread_routes/downvote/{{this.commentId}}">Dislike</a></p>
+            <p>Date Created: {{this.formattedCreatedDate}}</p>
+              <p>Likes: {{this.likes}} <a href="/property/upvote/{{this.commentId}}">Add Like</a></p>
+        <p>Dislikes: {{this.dislikes}} <a href="/property/downvote/{{this.commentId}}">Add Dislike</a></p>
         </div>
+        <hr>
         {{/each}}
     </div>
 </div>
-<hr>
+
 <h3>Report This Property Page</h3>
   <form action="/report/property/{{userId}}/{{property.propertyId}}" method="get">
    <label for="submitCommentButton">Report property?</label><br>
