--- a/views/allProperties.handlebars
+++ b/views/allProperties.handlebars
@@ -2,11 +2,10 @@
 
 <p>Use this page to see properties stored on the website's database and search by their location.</p>
 <p>Click on a property listing to see additional details and navigate to its listing page.</p>
-
-<a href="/property/addproperty">Want to add a property to the database? Click here.</a>
-
-<br>  
-<br>
+<ul>
+<li><a href="/property/addproperty">Want to add a property to the database? Click here.</a></li>
+<li><a href="/property/all">Want to see every property in the database? Click here.</a></li></ul>
+</ul>
 
 <form id="searchForm" method="GET">
     
